tests/invalid/set_remove_missing_elem_eq/main.py
def run_case() -> None:
    s: set[set[int]] = set()
    x: set[int] = set()
    s.remove(x)


if __name__ == "__main__":
    run_case()
